Archive2/0e/90d316886516b2/output
main.cpp:11:5: error: 'PreferenceCore' does not name a type
     PreferenceCore *preferencesCore ;
     ^
